<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/d88804afc3dde22148fe471fb0e56f34"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp"

        >

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18sp"
            android:text="@string/titulo"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="motivation"
                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/volunteer"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/tema1"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="violence"
                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/stopviolence"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/tema2"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>



        </LinearLayout>

        <!-- Second Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="sense"
                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/skills"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/tema3"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="attitudes"
                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/handcuffs"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/tema4"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>



        </LinearLayout>
        <!-- End Second Row-->
        <!-- Third Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="work"

                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/network"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/tema5"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="results"
                >
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/test"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/white"
                    android:text="@string/temaResults"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>




        </LinearLayout>
        <!-- End Third Row-->

    </LinearLayout>

    </ScrollView>
</LinearLayout>