<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d88804afc3dde22148fe471fb0e56f34"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15sp"
            android:columnOrderPreserved="false"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="14dp"

            >

            <TextView
                android:id="@+id/textGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18sp"
                android:text="@string/temaResultss"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/volunteer"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>




            </LinearLayout>

            <!-- segunda Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/stopviolence"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema2"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="88dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <!-- terceira Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/skills"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema3"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv3"
                        android:text=""
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="60dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!-- quarta Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/handcuffs"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema4"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv4"
                        android:text=""
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="55dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!-- quinta Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/network"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema5"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv5"
                        android:text=""
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!-- sexta Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"

                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/calculating"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mediafinal"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvmediafinal"
                        android:text=""
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="100dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!-- setima Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:onClick="clearAll"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"
                        android:src="@drawable/eraser"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/limpartudo"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

    </ScrollView>
</LinearLayout>